@@ -1,6 +1,6 @@
-Date: 2024-02-28
+Date: 2024-03-02
 Package: CHNOSZ
-Version: 2.1.0-2
+Version: 2.1.0-3
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
